添加科室，终端页面展示科室

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -39,6 +39,13 @@ body, .app {
     /*background-color: white;*/
 }
 
+/*--------------------------------*/
+ .color{
+     color: blue;
+ }
+
+ /*--------------------------------*/
+
 .bg{
     position: absolute;
     top: -18px;
